--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,13 @@
 .nav {
+  display: flex;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  padding: 24px 0;
+  padding: 24px 30px;
   backdrop-filter: saturate(180%) blur(20px);
   background-color: rgba(255, 255, 255, 0.72);
   box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.08);
+  text-align: center;
 }
