--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,10 @@
 }
 body {
   background: #f5effc;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
